--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anime Charcter Fetcher</title>
   <link rel="stylesheet" href="styles8.css">
+  <link rel="icon" href="https://github.com/B-got-banned/my-portfolio/raw/main/images/B-got-banned.png">
 </head>
 <body>
   <input type="text" id="charName" placeholder="Enter anime character">
